--- a/css/style.css
+++ b/css/style.css
@@ -526,14 +526,15 @@ body {
     position: absolute;
     right: -100%;
     top: 125px;
+    display: none;
     width: 30%;
     height: calc(100% - 70px);
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     -ms-flex-pack: distribute;
-        justify-content: space-around;
+    justify-content: space-around;
     padding: 0;
     -webkit-transition: all 400ms;
     transition: all 400ms;
@@ -584,11 +585,6 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-  }
-  .header__leftNav {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     margin-top: 2.5rem;
     margin-left: 0rem;
   }
